<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/pink">

    <LinearLayout
        android:id="@+id/linear_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/arrow_left" />

            <TextView
                android:id="@+id/tv_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registro"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo_fondo_claro"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="599dp"
        android:layout_below="@+id/linear_registro"
        android:layout_marginTop="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rl_register_style">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/et_style"
            android:hint="@string/et_hint_nombre_registro"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_nombre"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/et_style"
            android:hint="@string/et_hint_correo_registro"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_correo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/et_style"
            android:hint="@string/et_hint_contrasena_registro"
            android:inputType="textPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/et_contrasena_confirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_contrasena"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/et_style"
            android:hint="@string/et_hint_confirmar_contrasena_registro"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/et_contrasena_confirmacion"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn_registrarse_registro"
            android:textSize="15sp"/>
    </RelativeLayout>


</RelativeLayout>