<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/pink">

    <LinearLayout
        android:id="@+id/linear_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/arrow_left"/>

            <TextView
                android:id="@+id/tv_perfil_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_perfil"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:textSize="27sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/account_circle"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="599dp"
        android:layout_below="@+id/linear_registro"
        android:layout_marginTop="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rl_register_style">

        <LinearLayout
            android:id="@+id/linear_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nombre_perfil"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pencil"
                android:layout_marginStart="120dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/et_style"
            android:layout_below="@+id/linear_nombre"
            android:hint="@string/et_hint_nombre_perfil"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tv_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correo_perfil"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/et_nombre"/>
        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_correo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_style"
            android:hint="@string/et_hint_correo_perfil"
            android:inputType="textWebEmailAddress"
            android:padding="20dp" />

        <TextView
            android:id="@+id/tv_mascota_asociadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mascotas_asociadas_perfil"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/et_correo"/>
        <TextView
            android:id="@+id/tv_mascotas_asociadas_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mascota_asociadas"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/tv_suscripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tipo_suscripcion_perfil"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_mascotas_asociadas_info"/>

        <LinearLayout
            android:id="@+id/linear_suscripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_suscripcion"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/et_tipo_suscripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_suscripcion_perfil"
                android:padding="15dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="60dp"
                android:src="@drawable/paw"/>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>